--- a/project/package.json
+++ b/project/package.json
@@ -9,6 +9,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
@@ -25,6 +26,7 @@
     "@nrwl/node": "15.8.7",
     "@nrwl/webpack": "15.8.7",
     "@nrwl/workspace": "15.8.7",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
