--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
+    "dayjs": "^1.11.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
