--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@project/config/config-users": ["libs/config/config-users/src/index.ts"],
+      "@project/models/models-publication": [
+        "libs/models/models-publication/src/index.ts"
+      ],
       "@project/shared/shared-types": ["libs/shared/shared-types/src/index.ts"],
       "@project/util/util-core": ["libs/util/util-core/src/index.ts"],
       "@project/util/util-types": ["libs/util/util-types/src/index.ts"]
