--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,7 @@
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "4.13.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
