--- a/project/package.json
+++ b/project/package.json
@@ -11,14 +11,13 @@
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "4.13.0",
+    "@prisma/client": "4.12.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "dayjs": "^1.11.7",
     "joi": "17.9.1",
     "mongoose": "7.0.3",
-    "prisma": "4.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
@@ -45,6 +44,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "15.8.7",
     "prettier": "^2.6.2",
+    "prisma": "^4.12.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
