--- a/project/apps/publications/project.json
+++ b/project/apps/publications/project.json
@@ -69,7 +69,7 @@
     "db:migrate": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "npx prisma migrate dev --schema ./schema.prisma --skip-generate --skip-seed",
+        "command": "npx prisma migrate dev --name test --schema ./schema.prisma --skip-generate --skip-seed",
         "cwd": "libs/models/models-publication/src/prisma"
       }
     },
@@ -84,6 +84,13 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "npx prisma generate --schema ./schema.prisma",
+        "cwd": "libs/models/models-publication/src/prisma"
+      }
+    },
+    "db:seed": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx ts-node --compiler-options {\"module\":\"CommonJS\"} ./seed.ts",
         "cwd": "libs/models/models-publication/src/prisma"
       }
     }
