--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -22,6 +22,7 @@
       "@project/models/models-publication": [
         "libs/models/models-publication/src/index.ts"
       ],
+      "@project/shared/shared-pipes": ["libs/shared/shared-pipes/src/index.ts"],
       "@project/shared/shared-types": ["libs/shared/shared-types/src/index.ts"],
       "@project/util/util-core": ["libs/util/util-core/src/index.ts"],
       "@project/util/util-types": ["libs/util/util-types/src/index.ts"]
