--- a/project/package.json
+++ b/project/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "3.6.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "2.3.1",
     "@nestjs/core": "^9.0.0",
