--- a/project/apps/users/.env-example
+++ b/project/apps/users/.env-example
@@ -7,3 +7,11 @@ MONGO_AUTH_BASE=admin
 PORT=3000
 JWT_AT_SECRET=secret
 JWT_AT_EXPIRES_IN=5m
+JW_RT_SECRET=refreshSecret
+JW_RT_EXPIRES_IN=30d
+RABBIT_HOST=localhost
+RABBIT_PASSWORD=test
+RABBIT_USER=admin
+RABBIT_PORT=5672
+RABBIT_QUEUE=readme.notify
+RABBIT_EXCHANGE=readme.notify
